# todo_list_app_fastapi

./: .dockerignore  .flake8  .gitignore  DESICION_LOG.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
app/application/services/: auth_service.py
app/application/uses_cases/: task.py  todo_list.py
app/domain/models/: task.py  todo_list.py  user.py
app/domain/repositories/: task_repo.py  todo_list_repo.py  user_repo.py
app/infrastructure/: config.py
app/infrastructure/api/: main.py
app/infrastructure/api/dependencies/: auth.py
app/infrastructure/api/routes/: auth_routes.py  tasks_routes.py  todo_list_routes.py
app/infrastructure/api/schemas/: task.py  todo_list.py  user.py
app/infrastructure/database/models/: __init__.py  task.py  todo_list.py  user.py
app/infrastructure/database/repositories/: task_repo_impl.py  todo_list_repo_impl.py  user_repo_impl.py
app/scripts/: init_db.py
tests/: conftest.py
tests/application/uses_cases/: test_task.py  test_todo_list.py
tests/infrastructure/api/: test_task_routes.py  test_todo_list_routes.py
tests/infrastructure/database/: test_task_repo_impl.py  test_todo_list_repo.py
