[project]
name = "todo-list-app-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana Elles",email = "alelles16@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "colorama (>=0.4.6,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.venv
  | env
  | venv
  | __pycache__
  | migrations
  | database\.db
)/
'''
